--- a/package.json
+++ b/package.json
@@ -15,5 +15,14 @@
   "bugs": {
     "url": "https://github.com/informaticslab/monitor/issues"
   },
-  "homepage": "https://github.com/informaticslab/monitor#readme"
+  "homepage": "https://github.com/informaticslab/monitor#readme",
+  "dependencies": {
+    "express": "^4.13.4"
+  },
+  "devDependencies": {
+    "babel-preset-es2015": "^6.6.0",
+    "gulp": "^3.9.1",
+    "gulp-babel": "^6.1.2",
+    "jasmine": "^2.4.1"
+  }
 }
