--- a/package.json
+++ b/package.json
@@ -17,12 +17,16 @@
   },
   "homepage": "https://github.com/informaticslab/monitor#readme",
   "dependencies": {
-    "express": "^4.13.4"
+    "express": "^4.13.4",
+    "request": "^2.69.0"
   },
   "devDependencies": {
+    "babel-cli": "^6.6.5",
+    "babel-core": "^6.7.4",
     "babel-preset-es2015": "^6.6.0",
+    "chai": "^3.5.0",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
-    "jasmine": "^2.4.1"
+    "mocha": "^2.4.5"
   }
 }
