--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Monitors readiness of the IIU's systems.",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha --compilers js:babel-core/register --recursive"
   },
   "repository": {
     "type": "git",
@@ -25,8 +25,14 @@
     "babel-core": "^6.7.4",
     "babel-preset-es2015": "^6.6.0",
     "chai": "^3.5.0",
+    "chai-http": "^2.0.1",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
     "mocha": "^2.4.5"
+  },
+  "babel": {
+    "presets": [
+      "es2015"
+    ]
   }
 }
