--- a/package.json
+++ b/package.json
@@ -4,35 +4,39 @@
   "description": "Monitors readiness of the IIU's systems.",
   "main": "app.js",
   "scripts": {
-    "test": "mocha --compilers js:babel-core/register --recursive"
+    "test": "echo \"Error no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/informaticslab/monitor.git"
   },
-  "author": "",
-  "license": "ISC",
+  "author": "Michael Ta",
+  "license": "Apache",
   "bugs": {
     "url": "https://github.com/informaticslab/monitor/issues"
   },
   "homepage": "https://github.com/informaticslab/monitor#readme",
   "dependencies": {
+    "body-parser": "^1.15.0",
     "express": "^4.13.4",
+    "mongoose": "^4.4.10",
     "request": "^2.69.0"
   },
   "devDependencies": {
-    "babel-cli": "^6.6.5",
-    "babel-core": "^6.7.4",
-    "babel-preset-es2015": "^6.6.0",
-    "chai": "^3.5.0",
-    "chai-http": "^2.0.1",
     "gulp": "^3.9.1",
-    "gulp-babel": "^6.1.2",
-    "mocha": "^2.4.5"
-  },
-  "babel": {
-    "presets": [
-      "es2015"
-    ]
+    "gulp-if": "^2.0.0",
+    "gulp-jshint": "^2.0.0",
+    "gulp-load-plugins": "^1.2.0",
+    "gulp-mocha": "^2.2.0",
+    "gulp-nodemon": "^2.0.6",
+    "gulp-print": "^2.0.1",
+    "gulp-util": "^3.0.7",
+    "jshint": "^2.9.1",
+    "jshint-stylish": "^2.1.0",
+    "mocha": "^2.4.5",
+    "should": "^8.3.0",
+    "sinon": "^1.17.3",
+    "supertest": "^1.2.0",
+    "yargs": "^4.3.2"
   }
 }
