--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "body-parser": "^1.15.0",
     "express": "^4.13.4",
     "mongoose": "^4.4.10",
+    "net-ping": "^1.2.0",
     "request": "^2.69.0"
   },
   "devDependencies": {
     "gulp": "^3.9.1",
+    "gulp-env": "^0.4.0",
     "gulp-if": "^2.0.0",
     "gulp-jshint": "^2.0.0",
     "gulp-load-plugins": "^1.2.0",
