updated jshintrc, ignore mocha keywords

--- a/.jshintrc
+++ b/.jshintrc
@@ -55,6 +55,13 @@
     "node": true,
 
     "globals": {
-        "angular": false
+        "angular": false,
+        /* MOCHA */
+        "describe"   : false,
+        "it"         : false,
+        "before"     : false,
+        "beforeEach" : false,
+        "after"      : false,
+        "afterEach"  : false
     }
 }
