--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Monitors readiness of the IIU's systems.",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error no test specified\" && exit 1"
+    "test": "mocha -R list -b test/*.js --reporter nyan"
   },
   "repository": {
     "type": "git",
@@ -27,6 +27,7 @@
     "request": "^2.69.0"
   },
   "devDependencies": {
+    "assert": "^1.3.0",
     "gulp": "^3.9.1",
     "gulp-env": "^0.4.0",
     "gulp-if": "^2.0.0",
