--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
   "homepage": "https://github.com/informaticslab/monitor#readme",
   "dependencies": {
     "body-parser": "^1.15.0",
+    "colors": "^1.1.2",
     "debug": "^2.2.0",
     "del": "^2.2.0",
     "express": "^4.13.4",
     "moment": "^2.12.0",
     "mongoose": "^4.4.10",
     "ping": "^0.1.10",
+    "redis": "^2.6.0-1",
     "request": "^2.69.0"
   },
   "devDependencies": {
