--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "body-parser": "^1.15.0",
     "colors": "^1.1.2",
+    "commander": "^2.9.0",
     "debug": "^2.2.0",
     "del": "^2.2.0",
     "express": "^4.13.4",
