--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "mongoose": "^4.4.10",
     "ping": "^0.1.10",
     "redis": "^2.6.0-1",
-    "request": "^2.69.0"
+    "request": "^2.69.0",
+    "shortid": "^2.2.6"
   },
   "devDependencies": {
     "assert": "^1.3.0",
@@ -43,6 +44,7 @@
     "jshint": "^2.9.1",
     "jshint-stylish": "^2.1.0",
     "mocha": "^2.4.5",
+    "proxyquire": "^1.7.4",
     "should": "^8.3.0",
     "sinon": "^1.17.3",
     "supertest": "^1.2.0",
