--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/informaticslab/monitor#readme",
   "dependencies": {
+    "async": "^2.0.0-rc.3",
     "body-parser": "^1.15.0",
     "colors": "^1.1.2",
     "commander": "^2.9.0",
@@ -32,6 +33,7 @@
   },
   "devDependencies": {
     "assert": "^1.3.0",
+    "faker": "^3.1.0",
     "gulp": "^3.9.1",
     "gulp-env": "^0.4.0",
     "gulp-if": "^2.0.0",
