--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "ping": "^0.1.10",
     "redis": "^2.6.0-1",
     "request": "^2.69.0",
-    "shortid": "^2.2.6"
+    "shortid": "^2.2.6",
+    "validator": "^5.2.0"
   },
   "devDependencies": {
     "assert": "^1.3.0",
