--- a/package.json
+++ b/package.json
@@ -28,13 +28,18 @@
     "express": "^4.13.4",
     "moment": "^2.12.0",
     "mongoose": "^4.4.10",
-    "ping": "^0.1.10",
     "redis": "^2.6.0-1",
     "request": "^2.69.0",
     "shortid": "^2.2.6",
     "stream-spigot": "^3.0.5",
     "timestream-aggregates": "^0.1.7",
-    "validator": "^5.2.0"
+    "validator": "^5.2.0",
+    "angular2": "2.0.0-beta.14",
+    "systemjs": "0.19.25",
+    "es6-shim": "^0.35.0",
+    "reflect-metadata": "0.1.2",
+    "rxjs": "5.0.0-beta.2",
+    "zone.js": "0.6.6"
   },
   "devDependencies": {
     "assert": "^1.3.0",
@@ -55,6 +60,8 @@
     "should": "^8.3.0",
     "sinon": "^1.17.3",
     "supertest": "^1.2.0",
-    "yargs": "^4.3.2"
+    "yargs": "^4.3.2",
+    "typescript": "^1.8.9",
+    "typings":"^0.7.12"
   }
 }
