Added basic framework for ng2 frontend. Updated gulpfile to support typescript compilation. WIP

--- a/package.json
+++ b/package.json
@@ -52,6 +52,8 @@
     "gulp-mocha": "^2.2.0",
     "gulp-nodemon": "^2.0.6",
     "gulp-print": "^2.0.1",
+    "gulp-sourcemaps": "^1.6.0",
+    "gulp-typescript": "^2.13.0",
     "gulp-util": "^3.0.7",
     "jshint": "^2.9.1",
     "jshint-stylish": "^2.1.0",
@@ -60,8 +62,8 @@
     "should": "^8.3.0",
     "sinon": "^1.17.3",
     "supertest": "^1.2.0",
-    "yargs": "^4.3.2",
     "typescript": "^1.8.9",
-    "typings":"^0.7.12"
+    "typings": "^0.7.12",
+    "yargs": "^4.3.2"
   }
 }
