building basical angular2 front end.  created angular service to retreive all the services. http.get is coming back as undefined need to investigate.

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/informaticslab/monitor#readme",
   "dependencies": {
+    "angular2": "2.0.0-beta.14",
     "async": "^2.0.0-rc.3",
     "body-parser": "^1.15.0",
     "colors": "^1.1.2",
@@ -25,20 +26,20 @@
     "concat-stream": "^1.5.1",
     "debug": "^2.2.0",
     "del": "^2.2.0",
+    "es6-shim": "^0.35.0",
     "express": "^4.13.4",
+    "highcharts": "^4.2.3",
     "moment": "^2.12.0",
     "mongoose": "^4.4.10",
     "redis": "^2.6.0-1",
+    "reflect-metadata": "0.1.2",
     "request": "^2.69.0",
+    "rxjs": "5.0.0-beta.2",
     "shortid": "^2.2.6",
     "stream-spigot": "^3.0.5",
+    "systemjs": "0.19.25",
     "timestream-aggregates": "^0.1.7",
     "validator": "^5.2.0",
-    "angular2": "2.0.0-beta.14",
-    "systemjs": "0.19.25",
-    "es6-shim": "^0.35.0",
-    "reflect-metadata": "0.1.2",
-    "rxjs": "5.0.0-beta.2",
     "zone.js": "0.6.6"
   },
   "devDependencies": {
