--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   },
   "homepage": "https://github.com/informaticslab/monitor#readme",
   "dependencies": {
-    "angular2": "2.0.0-beta.14",
+    "angular2": "2.0.0-beta.15",
     "async": "^2.0.0-rc.3",
     "body-parser": "^1.15.0",
     "colors": "^1.1.2",
@@ -31,6 +31,7 @@
     "highcharts": "^4.2.3",
     "moment": "^2.12.0",
     "mongoose": "^4.4.10",
+    "ng2-bootstrap": "^1.0.13",
     "redis": "^2.6.0-1",
     "reflect-metadata": "0.1.2",
     "request": "^2.69.0",
@@ -40,7 +41,7 @@
     "systemjs": "0.19.25",
     "timestream-aggregates": "^0.1.7",
     "validator": "^5.2.0",
-    "zone.js": "0.6.6"
+    "zone.js": "0.6.10"
   },
   "devDependencies": {
     "assert": "^1.3.0",
