simple table interface for reporting list. Something is wrong witht the gulp file will need to look into that.

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "angular2": "2.0.0-beta.15",
     "async": "^2.0.0-rc.3",
     "body-parser": "^1.15.0",
+    "bootstrap": "^3.3.6",
     "colors": "^1.1.2",
     "commander": "^2.9.0",
     "compression": "^1.6.1",
