--- a/bower.json
+++ b/bower.json
@@ -15,8 +15,9 @@
     "tests"
   ],
   "dependencies": {
-        "rdash-ui": "1.0.*",
-        "bootstrap": "~3.2.0",
-        "font-awesome": "~4.1.0"
+    "rdash-ui": "1.0.*",
+    "bootstrap": "~3.2.0",
+    "font-awesome": "~4.1.0",
+    "SpinKit": "spinkit#^1.2.5"
   }
 }
