--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "moment": "^2.12.0",
     "mongoose": "^4.4.10",
     "ng2-bootstrap": "^1.0.13",
+    "primeng": "^1.0.0-beta.3",
+    "primeui": "^4.1.8",
     "redis": "^2.6.0-1",
     "reflect-metadata": "0.1.2",
     "request": "^2.69.0",
