--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "es6-shim": "^0.35.0",
     "express": "^4.13.4",
     "highcharts": "^4.2.3",
+    "intl": "^1.2.2",
     "jira-connector": "^2.3.0",
     "lodash": "^4.11.1",
     "moment": "^2.12.0",
