--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "async": "^2.0.0-rc.3",
     "body-parser": "^1.15.0",
     "bootstrap": "^3.3.6",
+    "chart.js": "^2.1.3",
     "colors": "^1.1.2",
     "commander": "^2.9.0",
     "compression": "^1.6.1",
@@ -46,6 +47,7 @@
     "moment": "^2.12.0",
     "mongoose": "^4.4.10",
     "ng2-bootstrap": "^1.0.13",
+    "ng2-charts": "^1.1.0",
     "primeng": "^1.0.0-beta.3",
     "primeui": "^4.1.8",
     "redis": "^2.6.0-2",
