--- a/package.json
+++ b/package.json
@@ -79,10 +79,12 @@
     "jshint": "^2.9.1",
     "jshint-stylish": "^2.1.0",
     "mocha": "^2.4.5",
+    "path": "^0.12.7",
     "proxyquire": "^1.7.4",
     "should": "^8.3.0",
     "sinon": "^1.17.3",
     "supertest": "^1.2.0",
+    "systemjs-builder": "^0.15.17",
     "typescript": "^1.8.10",
     "typings": "^0.8.1",
     "yargs": "^4.3.2"
