--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "mongoose": "^4.4.10",
     "ng2-bootstrap": "^1.0.13",
     "ng2-charts": "^1.1.0",
+    "nodemailer": "^2.5.0",
     "primeng": "^1.0.0-beta.3",
     "primeui": "^4.1.8",
     "redis": "^2.6.0-2",
